--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
+body{
+  background-color:#CEE0DC;
+}
+h1{
+  margin-top: 0px;
+  background-color:#ffffff;
+  color: #04080F;
   text-align: center;
+  border-style: solid;
+  border-radius: 3px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form{
+  padding: 5px;
+  width: 10vw;
+  min-width: 170px;
+  height: 100vh;
+  border-right-style: solid;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link{
+  color: blue;
+  text-decoration: none;
+  border-style: solid;
+  border-radius: 3px;
+  align-self: right;
 }
