--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,17 @@
 body{
-  background-color:#CEE0DC;
+  background-color:#ffffff;
 }
 h1{
   margin-top: 0px;
-  background-color:#ffffff;
+  padding: 0px;
   color: #04080F;
   text-align: center;
-  border-style: solid;
+  border-bottom-style: solid;
   border-radius: 3px;
 }
 form{
-  padding: 5px;
   width: 10vw;
-  min-width: 170px;
+  min-width: 180px;
   height: 100vh;
   border-right-style: solid;
 }
@@ -21,11 +20,24 @@ nav{
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  border-style: solid;
-  border-radius: 3px;
-  color: blue;
+  background-color: deepskyblue;
 }
-.link{
+@media all and (max-width: 710px){
+  .nav{
+    flex-direction: column; 
+  }
+  nav .link{
+    text-align: center;
+    border-top: 1px solid;
+    width: 100vw;
+  }
+}
+nav .link{
   text-decoration: none;
-  color: blue;
+  color: white;
+  display: block;
+  padding: 1em;
+}
+nav .link:hover{
+  background-color: #1565C0
 }
