--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,12 @@
 body{
   background-color:#ffffff;
 }
-h1{
-  margin-top: 0px;
-  padding: 0px;
-  color: #04080F;
-  text-align: center;
-  border-bottom-style: solid;
-  border-radius: 3px;
-}
-form{
-  width: 10vw;
-  min-width: 180px;
-  height: 100vh;
-  border-right-style: solid;
-}
 nav{
   width: 100vw;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
   background-color: deepskyblue;
-}
-@media all and (max-width: 710px){
-  .nav{
-    flex-direction: column; 
-  }
-  nav .link{
-    text-align: center;
-    border-top: 1px solid;
-    width: 100vw;
-  }
 }
 nav .link{
   text-decoration: none;
@@ -41,3 +17,66 @@ nav .link{
 nav .link:hover{
   background-color: #1565C0
 }
+.wrapper{
+  display: flex;
+  flex-flow: row wrap;
+  text-align: center;
+}
+h1{
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+  width: 100vw;
+  color: #04080F;
+  text-align: center;
+  border-bottom-style: solid;
+  border-radius: 3px;
+}
+form{
+  width: 180px;
+  height: 80vh;
+  border-right-style: solid;
+}
+main{
+  width: 80vw;
+  display: flex;
+  flex-flow: row wrap;
+  text-align: left;
+}
+main > *{
+  width: 300px;
+  margin: 10px;
+  border-style: solid;
+  border-radius: 5px;
+}
+h4{
+  background-color: deepskyblue;
+  text-align: center;
+  color: white;
+}
+@media all and (max-width: 1000px){
+  .nav{
+    flex-direction: column; 
+  }
+  nav .link{
+    text-align: center;
+    border-top: 1px solid;
+    width: 100vw;
+  }
+  form{
+    border-right-style: none;
+    border-bottom-style: solid;
+    width: 100vw;
+    height: 200px;
+  }
+  input{
+    width: 100vw;
+  }
+  main{
+    flex-direction: column;
+  }
+  main > *{
+    width: 90vw;
+  }
+}
+
