--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,8 @@ main > *{
   border-radius: 5px;
 }
 h4{
+  margin-top: 0px;
+  font-size: 20px;
   background-color: deepskyblue;
   text-align: center;
   color: white;
@@ -62,12 +64,16 @@ h4{
     text-align: center;
     border-top: 1px solid;
     width: 100vw;
+    height: 2px;
   }
   form{
     border-right-style: none;
     border-bottom-style: solid;
     width: 100vw;
     height: 200px;
+  }
+  h3{
+    margin-top: 0px;
   }
   input{
     width: 100vw;
